scripts/kind/gloo/echo-http-server-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
  namespace: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
        - image: hashicorp/http-echo
          args:
            - "-text=version:v2"
            - -listen=:8080
          imagePullPolicy: Always
          name: echo-v2
          ports:
            - containerPort: 8080
